--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,14 @@
 @import "bootstrap/scss/bootstrap";
+
+.navbar {
+  background: #F8F8F8;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #777;
+}
+
+.navbar a:hover {
+  color: #5E5E5D;
+}
