--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsWikinimous</title>
+    <title>Wikinimous</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,7 +11,7 @@
 
   <body>
     <div class="navbar">
-      <h1><%= link_to "Wikinimous", articles_path %></h1>
+      <h4><%= link_to "Wikinimous", articles_path %></h4>
       <%= link_to "New Article", new_article_path %>
     </div>
     <div class="container">
