--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,11 @@
-<h2><%= @article.title %></h2>
-<%= link_to "Edit", edit_article_path %>
-<%= link_to "Destroy", article_path(@article), method: :delete, data: { confirm: "Delete #{@article.title}?"} %>
-<p><%= @article.content %></p>
+<article>
+  <div class="header">
+    <h2><%= @article.title %></h2>
+    <div class="article-controls">
+      <%= link_to "Edit", edit_article_path %>
+      <%= link_to "Destroy", article_path(@article), method: :delete, data: { confirm: "Delete #{@article.title}?"} %>
+    </div>
+  </div>
+  <hr>
+  <p><%= @article.content %></p>
+</article>
