--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://use.fontawesome.com/releases/v5.0.10/css/all.css');
 
 body {
   font-family: 'Open Sans';
@@ -22,6 +23,12 @@ body {
   a:hover {
   color: #5E5E5D;
   }
+}
+
+ #editor {
+    position: absolute;
+    width: 500px;
+    height: 400px;
 }
 
 .container {
