--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,1 @@
-<%= simple_form_for(@article) do |a| %>
-  <%= a.input :title %>
-  <%= a.input :content %>
-  <%= a.submit %>
-<% end %>
-
-<%= link_to "Back", articles_path %>
+<%= render "form", article: @article %>
